# aktenfux

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
aktenfuchs/: __init__.py  __main__.py  cli.py  config.py  db.py  llm.py  main.py  ollama_manager.py  pdf_text.py  review.py  schema.py  storage.py
aktenfuchs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aktenfux/: __init__.py  __main__.py  cli.py  config.py  db.py  filenames.py  llm.py  main.py  ollama_manager.py  pdf_metadata.py  review.py  schema.py  storage.py
tests/: test_cli_all.py  test_dry_run_sidecar.py  test_filenames.py  test_llm.py  test_pdf_metadata.py  test_review.py  test_schema.py  test_sidecar.py  test_storage_paths.py
