[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aktenfuchs"
version = "0.1.0"
description = "A local, privacy-first document assistant for OCR-ready PDFs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pypdf>=4.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
watch = [
    "watchdog>=4.0",
]
pdf-extra = [
    "pdfplumber>=0.11",
]

[project.scripts]
afu = "aktenfuchs.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aktenfuchs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
